45
================

08/06/21 Vacc/Medical give buttons linked to wrong permission
08/06/21 Never include generated timestamp in form preview
08/06/21 Online form preview should respond to forenames/surname
08/06/21 Select all icon in tables #533
07/06/21 asm3_onlineform_submit callback function for forms
07/06/21 Ability to rename headers for SAC CSV Export
07/06/21 Use the database report header for maps and charts
07/06/21 Remove .html and _ from subject when emailing from media
04/06/21 Ability to title case headers for SAC CSV Export
02/06/21 CTRL+A: only select visible rows and only when table is focused #1014
02/06/21 Remove inactive log types from email dialogs #1016
02/06/21 HomeAgain: issue with blank forenames for orgs
01/06/21 Fix for online form checkbox/radio on mobile layout
01/06/21 SavourLife: support holding listings for animals in care
27/05/21 Type bug caused bulk screen to set units to -1
27/05/21 Upgrade fullcalendar to last of 3.x series #998
25/05/21 Allow multiple dispatch ACOs #995
25/05/21 csvimport: Attach licenses to original owner for nonshelter
23/05/21 Add missing watermark button icon
23/05/21 Add US territories to state code list
17/05/21 Stop form checkbox labels taking up all width
17/05/21 Use exact breed matching for SavourLife
15/05/21 Only calculate total alerts from visible alerts
12/05/21 csvimport: support foster capacity (Saggi Neumann)
12/05/21 Re-index button for online form fields (Jacob Sabella)
12/05/21 Updated Norwegian translation (Astrid Nordhagen)
10/05/21 Updated Portugese translation (Nuno Leal)
07/05/21 Add Reserved/CurrentOwner first/last wordkeys
07/05/21 Register from date cutoff for microchips #1006
06/05/21 Add animal, setting microchip number ticks the box
04/05/21 Support reports and templates in undelete
03/05/21 Flag not present report builder criteria
27/04/21 Test reschedule date (Matt Bickel)
27/04/21 json_mail and json_report service methods (Jacob Sabella)